--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 
 <!-- SECTION  carusel-->
 <section>
-    <div class="section">
     <div class="container">
     <div class="section-container">
            <div class="section-left">
@@ -81,10 +80,9 @@
         </div>
         </div>
     </div>
-      </div>
-    </div>
+</div>
 </section>
-
+<!--  SECTION service -->
 <section>
     <div class="container">
     <div class="offer-section">
@@ -128,24 +126,24 @@
     <div class="special-offer-section">
         <h1>СПЕЦПРЕДЛОЖЕНИЯ ЭТОГО МЕСЯЦА</h1>
         <div class="special-offer">
-        <div class="sloy-2">
+        <div class="sloy">
             <div><img src="./img/sloy-1.png" alt="sloy-1"></div>
             <div><h2>2-СЛОЙНЫЙ ГОФРОКАРТОН</h2></div>
             <div><p>от 12,5 руб/м2</p></div>
         </div>
-<div class="sloy-3">
+<div class="sloy">
     <div><img src="./img/sloy-2.png" alt="sloy-2"></div>
     <div><h2>3-СЛОЙНЫЙ ГОФРОКАРТОН БУРЫЙ</h2></div>
     <div><p>от 12,5 руб/м2</p></div>
 
 </div>
-<div class="sloy-4">
+<div class="sloy">
     <div><img src="./img/sloy-3.png" alt="sloy-3"></div>
     <div><h2>3-СЛОЙНЫЙ ГОФРОКАРТОН БЕЛЫЙ</h2></div>
     <div><p>от 12,5 руб/м2</p></div>
 
 </div>
-<div class="sloy-4">
+<div class="sloy">
     <div><img src="./img/sloy-4.png" alt="sloy-4"></div>
     <div><h2>5-СЛОЙНЫЙ ГОФРОКАРТОН БЕЛЫЙ</h2></div>
     <div><p>от 12,5 руб/м2</p></div>
