section product added

--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
 </section>
 
 <section>
-    <div class="container">
+    
     <div class="special-offer-section">
+        <div class="container">
         <h1>СПЕЦПРЕДЛОЖЕНИЯ ЭТОГО МЕСЯЦА</h1>
         <div class="special-offer">
         <div class="sloy-1">
@@ -179,7 +180,7 @@
 </p>
         </div>
         <h2>Популярные размеры (всегда в наличии):</h2>
-        <table>
+        <table cellspacing="0">
             <thead>
 <tr>
     <th>Тип картона</th>
@@ -227,7 +228,7 @@
     </div>
 </div>
     </div>
-</section>
+</section>  
 
 </div>
 <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
