--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
           <div class="container">
             <h2>Отвечаем на Ваши вопросы, принимаем предложения</h2>
                     <form action="#" class="question">
+                      
                     <div class="left-form">
                         <input type="text" placeholder="Александр">
                         <input type="text" placeholder="Телефон">
@@ -605,9 +606,11 @@
                         <textarea name="coment" id="coment" cols="50" rows="10">Введите текст сообщения</textarea>
                         <input type="file" style="display: none;">
                         <div class="btn-form">
-                            <img src="./img/eva_attach-fill.png" alt="">
-                            <button class="fayl">Прикрепить файл</button>
-                            <button>Отправить</button>
+                            <div class="btn-fayl">
+                   
+                            <button class="fayl"><img src="./img/eva_attach-fill.png" alt="">Прикрепить файл</button>
+                        </div>
+                            <button id="send">Отправить</button>
                         </div>
                     </div>
                 </form>
